src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON goto_main clase vars funcion main
Rule 2     goto_main -> e
Rule 3     main -> MAIN LPAR RPAR main_start bloque
Rule 4     main_start -> e
Rule 5     clase -> CLASS inicializar_clase ID clase1 LCBRAC clase2 clase3 RCBRAC clase
Rule 6     clase -> e
Rule 7     inicializar_clase -> e
Rule 8     clase1 -> LT INHERITS ID GT
Rule 9     clase1 -> e
Rule 10    clase2 -> ATTRIBUTES declaracion atributos asign
Rule 11    clase2 -> e
Rule 12    atributos -> declaracion atributos
Rule 13    atributos -> e
Rule 14    asign -> asignacion asign
Rule 15    asign -> e
Rule 16    clase3 -> METHODS funcion metodos
Rule 17    clase3 -> e
Rule 18    metodos -> funcion metodos
Rule 19    metodos -> e
Rule 20    vars -> VAR declaracion declaraciones
Rule 21    vars -> e
Rule 22    declaraciones -> declaracion declaraciones
Rule 23    declaraciones -> e
Rule 24    declaracion -> declaracion1 COLON declaracion5 SEMICOLON
Rule 25    declaracion1 -> ID declaracion2 declaracion4
Rule 26    declaracion2 -> LSBRAC CTEI RSBRAC declaracion3
Rule 27    declaracion2 -> e
Rule 28    declaracion3 -> LSBRAC CTEI RSBRAC
Rule 29    declaracion3 -> e
Rule 30    declaracion4 -> COMMA declaracion1
Rule 31    declaracion4 -> e
Rule 32    declaracion5 -> tipo
Rule 33    declaracion5 -> ID
Rule 34    funcion -> funcion1 FUNCTION ID inicio LPAR funcion2 RPAR bloque funcion
Rule 35    funcion -> e
Rule 36    funcion1 -> tipo
Rule 37    funcion1 -> VOID funcion_void
Rule 38    funcion_void -> e
Rule 39    inicio -> e
Rule 40    funcion2 -> ID COLON tipo funcion3
Rule 41    funcion2 -> e
Rule 42    funcion3 -> COMMA ID COLON tipo funcion3
Rule 43    funcion3 -> e
Rule 44    tipo -> INT
Rule 45    tipo -> FLOAT
Rule 46    tipo -> STRING
Rule 47    tipo -> BOOL
Rule 48    bloque -> LCBRAC estatutos RCBRAC
Rule 49    estatutos -> estatuto estatutos
Rule 50    estatutos -> e
Rule 51    estatuto -> asignacion
Rule 52    estatuto -> condicion
Rule 53    estatuto -> llamada SEMICOLON
Rule 54    estatuto -> leer
Rule 55    estatuto -> escribir
Rule 56    estatuto -> ciclo_w
Rule 57    estatuto -> ciclo_f
Rule 58    estatuto -> regresar
Rule 59    asignacion -> variable EQ expresion SEMICOLON
Rule 60    variable -> ID variable1 variable2
Rule 61    variable1 -> DOT ID
Rule 62    variable1 -> e
Rule 63    variable2 -> LSBRAC expresion RSBRAC variable3
Rule 64    variable2 -> e
Rule 65    variable3 -> LSBRAC expresion RSBRAC
Rule 66    variable3 -> e
Rule 67    condicion -> IF LPAR expresion RPAR gotoF bloque condicion1 fill
Rule 68    gotoF -> e
Rule 69    fill -> e
Rule 70    condicion1 -> ELSE goto bloque
Rule 71    condicion1 -> e
Rule 72    goto -> e
Rule 73    llamada -> validar_id llamada1 LPAR llamada2 RPAR
Rule 74    validar_id -> ID
Rule 75    llamada1 -> DOT ID
Rule 76    llamada1 -> e
Rule 77    llamada2 -> expresion cuad_param llamada3
Rule 78    llamada2 -> e
Rule 79    cuad_param -> e
Rule 80    llamada3 -> COMMA expresion cuad_param llamada3
Rule 81    llamada3 -> e
Rule 82    leer -> READ LPAR variable add_read generar_cuadr RPAR SEMICOLON
Rule 83    add_read -> e
Rule 84    escribir -> WRITE LPAR escribir1 RPAR SEMICOLON
Rule 85    escribir1 -> texto add_print generar_cuadr escribir2
Rule 86    escribir1 -> expresion add_print generar_cuadr escribir2
Rule 87    add_print -> e
Rule 88    escribir2 -> COMMA escribir1
Rule 89    escribir2 -> e
Rule 90    texto -> CTESTR
Rule 91    ciclo_w -> WHILE push_while LPAR expresion RPAR gotoF DO bloque return_while
Rule 92    push_while -> e
Rule 93    return_while -> e
Rule 94    ciclo_f -> FROM LPAR variable EQ expresion asign_var TO expresion asign_exp migaja push_lt pop_for gotoF RPAR DO bloque update_fill_go
Rule 95    asign_var -> e
Rule 96    asign_exp -> e
Rule 97    pop_for -> e
Rule 98    migaja -> e
Rule 99    update_fill_go -> push_plus push1 pop_operfor asign_var
Rule 100   push1 -> e
Rule 101   pop_operfor -> e
Rule 102   regresar -> RETURN expresion SEMICOLON
Rule 103   expresion -> a_exp exp1
Rule 104   exp1 -> OR push_or a_exp pop_operador exp1
Rule 105   exp1 -> e
Rule 106   push_or -> e
Rule 107   pop_operador -> e
Rule 108   a_exp -> b_exp exp2
Rule 109   exp2 -> AND push_and b_exp pop_operador exp2
Rule 110   exp2 -> e
Rule 111   push_and -> e
Rule 112   b_exp -> c_exp exp3
Rule 113   exp3 -> LT push_lt c_exp pop_operador exp3
Rule 114   exp3 -> GT push_gt c_exp pop_operador exp3
Rule 115   exp3 -> COMP push_comp c_exp pop_operador exp3
Rule 116   exp3 -> NOTEQ push_noteq c_exp pop_operador exp3
Rule 117   exp3 -> e
Rule 118   push_lt -> e
Rule 119   push_gt -> e
Rule 120   push_comp -> e
Rule 121   push_noteq -> e
Rule 122   c_exp -> d_exp exp4
Rule 123   exp4 -> PLUS push_plus d_exp pop_operador exp4
Rule 124   exp4 -> MINUS push_minus d_exp pop_operador exp4
Rule 125   exp4 -> e
Rule 126   push_plus -> e
Rule 127   push_minus -> e
Rule 128   d_exp -> e_exp exp5
Rule 129   exp5 -> MULT push_mult e_exp pop_operador exp5
Rule 130   exp5 -> DIV push_div e_exp pop_operador exp5
Rule 131   exp5 -> e
Rule 132   push_mult -> e
Rule 133   push_div -> e
Rule 134   e_exp -> LPAR expresion RPAR
Rule 135   e_exp -> var_cte
Rule 136   e_exp -> variable
Rule 137   e_exp -> llamada
Rule 138   var_cte -> CTEI ctei
Rule 139   var_cte -> CTEF ctef
Rule 140   var_cte -> CTESTR ctestr
Rule 141   var_cte -> CTEB cteb
Rule 142   ctei -> e
Rule 143   ctef -> e
Rule 144   ctestr -> e
Rule 145   cteb -> e
Rule 146   generar_cuadr -> e
Rule 147   e -> <empty>

Terminals, with rules where they appear

AND                  : 109
ATTRIBUTES           : 10
BOOL                 : 47
CLASS                : 5
COLON                : 24 40 42
COMMA                : 30 42 80 88
COMP                 : 115
CTEB                 : 141
CTEF                 : 139
CTEI                 : 26 28 138
CTESTR               : 90 140
DIV                  : 130
DO                   : 91 94
DOT                  : 61 75
ELSE                 : 70
EQ                   : 59 94
FLOAT                : 45
FROM                 : 94
FUNCTION             : 34
GT                   : 8 114
ID                   : 1 5 8 25 33 34 40 42 60 61 74 75
IF                   : 67
INHERITS             : 8
INT                  : 44
LCBRAC               : 5 48
LPAR                 : 3 34 67 73 82 84 91 94 134
LSBRAC               : 26 28 63 65
LT                   : 8 113
MAIN                 : 3
METHODS              : 16
MINUS                : 124
MULT                 : 129
NOTEQ                : 116
OR                   : 104
PLUS                 : 123
PROGRAM              : 1
RCBRAC               : 5 48
READ                 : 82
RETURN               : 102
RPAR                 : 3 34 67 73 82 84 91 94 134
RSBRAC               : 26 28 63 65
SEMICOLON            : 1 24 53 59 82 84 102
STRING               : 46
TO                   : 94
VAR                  : 20
VOID                 : 37
WHILE                : 91
WRITE                : 84
error                : 

Nonterminals, with rules where they appear

a_exp                : 103 104
add_print            : 85 86
add_read             : 82
asign                : 10 14
asign_exp            : 94
asign_var            : 94 99
asignacion           : 14 51
atributos            : 10 12
b_exp                : 108 109
bloque               : 3 34 67 70 91 94
c_exp                : 112 113 114 115 116
ciclo_f              : 57
ciclo_w              : 56
clase                : 1 5
clase1               : 5
clase2               : 5
clase3               : 5
condicion            : 52
condicion1           : 67
cteb                 : 141
ctef                 : 139
ctei                 : 138
ctestr               : 140
cuad_param           : 77 80
d_exp                : 122 123 124
declaracion          : 10 12 20 22
declaracion1         : 24 30
declaracion2         : 25
declaracion3         : 26
declaracion4         : 25
declaracion5         : 24
declaraciones        : 20 22
e                    : 2 4 6 7 9 11 13 15 17 19 21 23 27 29 31 35 38 39 41 43 50 62 64 66 68 69 71 72 76 78 79 81 83 87 89 92 93 95 96 97 98 100 101 105 106 107 110 111 117 118 119 120 121 125 126 127 131 132 133 142 143 144 145 146
e_exp                : 128 129 130
escribir             : 55
escribir1            : 84 88
escribir2            : 85 86
estatuto             : 49
estatutos            : 48 49
exp1                 : 103 104
exp2                 : 108 109
exp3                 : 112 113 114 115 116
exp4                 : 122 123 124
exp5                 : 128 129 130
expresion            : 59 63 65 67 77 80 86 91 94 94 102 134
fill                 : 67
funcion              : 1 16 18 34
funcion1             : 34
funcion2             : 34
funcion3             : 40 42
funcion_void         : 37
generar_cuadr        : 82 85 86
goto                 : 70
gotoF                : 67 91 94
goto_main            : 1
inicializar_clase    : 5
inicio               : 34
leer                 : 54
llamada              : 53 137
llamada1             : 73
llamada2             : 73
llamada3             : 77 80
main                 : 1
main_start           : 3
metodos              : 16 18
migaja               : 94
pop_for              : 94
pop_operador         : 104 109 113 114 115 116 123 124 129 130
pop_operfor          : 99
programa             : 0
push1                : 99
push_and             : 109
push_comp            : 115
push_div             : 130
push_gt              : 114
push_lt              : 94 113
push_minus           : 124
push_mult            : 129
push_noteq           : 116
push_or              : 104
push_plus            : 99 123
push_while           : 91
regresar             : 58
return_while         : 91
texto                : 85
tipo                 : 32 36 40 42
update_fill_go       : 94
validar_id           : 73
var_cte              : 135
variable             : 59 82 94 136
variable1            : 60
variable2            : 60
variable3            : 63
vars                 : 1

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON goto_main clase vars funcion main

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON goto_main clase vars funcion main

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON goto_main clase vars funcion main

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . goto_main clase vars funcion main
    (2) goto_main -> . e
    (147) e -> .

    CLASS           reduce using rule 147 (e -> .)
    VAR             reduce using rule 147 (e -> .)
    VOID            reduce using rule 147 (e -> .)
    INT             reduce using rule 147 (e -> .)
    FLOAT           reduce using rule 147 (e -> .)
    STRING          reduce using rule 147 (e -> .)
    BOOL            reduce using rule 147 (e -> .)
    MAIN            reduce using rule 147 (e -> .)

    goto_main                      shift and go to state 5
    e                              shift and go to state 6

state 5

    (1) programa -> PROGRAM ID SEMICOLON goto_main . clase vars funcion main
    (5) clase -> . CLASS inicializar_clase ID clase1 LCBRAC clase2 clase3 RCBRAC clase
    (6) clase -> . e
    (147) e -> .

    CLASS           shift and go to state 8
    VAR             reduce using rule 147 (e -> .)
    VOID            reduce using rule 147 (e -> .)
    INT             reduce using rule 147 (e -> .)
    FLOAT           reduce using rule 147 (e -> .)
    STRING          reduce using rule 147 (e -> .)
    BOOL            reduce using rule 147 (e -> .)
    MAIN            reduce using rule 147 (e -> .)

    clase                          shift and go to state 7
    e                              shift and go to state 9

state 6

    (2) goto_main -> e .

    CLASS           reduce using rule 2 (goto_main -> e .)
    VAR             reduce using rule 2 (goto_main -> e .)
    VOID            reduce using rule 2 (goto_main -> e .)
    INT             reduce using rule 2 (goto_main -> e .)
    FLOAT           reduce using rule 2 (goto_main -> e .)
    STRING          reduce using rule 2 (goto_main -> e .)
    BOOL            reduce using rule 2 (goto_main -> e .)
    MAIN            reduce using rule 2 (goto_main -> e .)


state 7

    (1) programa -> PROGRAM ID SEMICOLON goto_main clase . vars funcion main
    (20) vars -> . VAR declaracion declaraciones
    (21) vars -> . e
    (147) e -> .

    VAR             shift and go to state 11
    VOID            reduce using rule 147 (e -> .)
    INT             reduce using rule 147 (e -> .)
    FLOAT           reduce using rule 147 (e -> .)
    STRING          reduce using rule 147 (e -> .)
    BOOL            reduce using rule 147 (e -> .)
    MAIN            reduce using rule 147 (e -> .)

    vars                           shift and go to state 10
    e                              shift and go to state 12

state 8

    (5) clase -> CLASS . inicializar_clase ID clase1 LCBRAC clase2 clase3 RCBRAC clase
    (7) inicializar_clase -> . e
    (147) e -> .

    ID              reduce using rule 147 (e -> .)

    inicializar_clase              shift and go to state 13
    e                              shift and go to state 14

state 9

    (6) clase -> e .

    VAR             reduce using rule 6 (clase -> e .)
    VOID            reduce using rule 6 (clase -> e .)
    INT             reduce using rule 6 (clase -> e .)
    FLOAT           reduce using rule 6 (clase -> e .)
    STRING          reduce using rule 6 (clase -> e .)
    BOOL            reduce using rule 6 (clase -> e .)
    MAIN            reduce using rule 6 (clase -> e .)


state 10

    (1) programa -> PROGRAM ID SEMICOLON goto_main clase vars . funcion main
    (34) funcion -> . funcion1 FUNCTION ID inicio LPAR funcion2 RPAR bloque funcion
    (35) funcion -> . e
    (36) funcion1 -> . tipo
    (37) funcion1 -> . VOID funcion_void
    (147) e -> .
    (44) tipo -> . INT
    (45) tipo -> . FLOAT
    (46) tipo -> . STRING
    (47) tipo -> . BOOL

    VOID            shift and go to state 19
    MAIN            reduce using rule 147 (e -> .)
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    funcion                        shift and go to state 15
    funcion1                       shift and go to state 16
    e                              shift and go to state 17
    tipo                           shift and go to state 18

state 11

    (20) vars -> VAR . declaracion declaraciones
    (24) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (25) declaracion1 -> . ID declaracion2 declaracion4

    ID              shift and go to state 26

    declaracion                    shift and go to state 24
    declaracion1                   shift and go to state 25

state 12

    (21) vars -> e .

    VOID            reduce using rule 21 (vars -> e .)
    INT             reduce using rule 21 (vars -> e .)
    FLOAT           reduce using rule 21 (vars -> e .)
    STRING          reduce using rule 21 (vars -> e .)
    BOOL            reduce using rule 21 (vars -> e .)
    MAIN            reduce using rule 21 (vars -> e .)


state 13

    (5) clase -> CLASS inicializar_clase . ID clase1 LCBRAC clase2 clase3 RCBRAC clase

    ID              shift and go to state 27


state 14

    (7) inicializar_clase -> e .

    ID              reduce using rule 7 (inicializar_clase -> e .)


state 15

    (1) programa -> PROGRAM ID SEMICOLON goto_main clase vars funcion . main
    (3) main -> . MAIN LPAR RPAR main_start bloque

    MAIN            shift and go to state 29

    main                           shift and go to state 28

state 16

    (34) funcion -> funcion1 . FUNCTION ID inicio LPAR funcion2 RPAR bloque funcion

    FUNCTION        shift and go to state 30


state 17

    (35) funcion -> e .

    MAIN            reduce using rule 35 (funcion -> e .)
    VOID            reduce using rule 35 (funcion -> e .)
    INT             reduce using rule 35 (funcion -> e .)
    FLOAT           reduce using rule 35 (funcion -> e .)
    STRING          reduce using rule 35 (funcion -> e .)
    BOOL            reduce using rule 35 (funcion -> e .)
    RCBRAC          reduce using rule 35 (funcion -> e .)


state 18

    (36) funcion1 -> tipo .

    FUNCTION        reduce using rule 36 (funcion1 -> tipo .)


state 19

    (37) funcion1 -> VOID . funcion_void
    (38) funcion_void -> . e
    (147) e -> .

    FUNCTION        reduce using rule 147 (e -> .)

    funcion_void                   shift and go to state 31
    e                              shift and go to state 32

state 20

    (44) tipo -> INT .

    FUNCTION        reduce using rule 44 (tipo -> INT .)
    SEMICOLON       reduce using rule 44 (tipo -> INT .)
    COMMA           reduce using rule 44 (tipo -> INT .)
    RPAR            reduce using rule 44 (tipo -> INT .)


state 21

    (45) tipo -> FLOAT .

    FUNCTION        reduce using rule 45 (tipo -> FLOAT .)
    SEMICOLON       reduce using rule 45 (tipo -> FLOAT .)
    COMMA           reduce using rule 45 (tipo -> FLOAT .)
    RPAR            reduce using rule 45 (tipo -> FLOAT .)


state 22

    (46) tipo -> STRING .

    FUNCTION        reduce using rule 46 (tipo -> STRING .)
    SEMICOLON       reduce using rule 46 (tipo -> STRING .)
    COMMA           reduce using rule 46 (tipo -> STRING .)
    RPAR            reduce using rule 46 (tipo -> STRING .)


state 23

    (47) tipo -> BOOL .

    FUNCTION        reduce using rule 47 (tipo -> BOOL .)
    SEMICOLON       reduce using rule 47 (tipo -> BOOL .)
    COMMA           reduce using rule 47 (tipo -> BOOL .)
    RPAR            reduce using rule 47 (tipo -> BOOL .)


state 24

    (20) vars -> VAR declaracion . declaraciones
    (22) declaraciones -> . declaracion declaraciones
    (23) declaraciones -> . e
    (24) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (147) e -> .
    (25) declaracion1 -> . ID declaracion2 declaracion4

    VOID            reduce using rule 147 (e -> .)
    INT             reduce using rule 147 (e -> .)
    FLOAT           reduce using rule 147 (e -> .)
    STRING          reduce using rule 147 (e -> .)
    BOOL            reduce using rule 147 (e -> .)
    MAIN            reduce using rule 147 (e -> .)
    ID              shift and go to state 26

    declaracion                    shift and go to state 33
    declaraciones                  shift and go to state 34
    e                              shift and go to state 35
    declaracion1                   shift and go to state 25

state 25

    (24) declaracion -> declaracion1 . COLON declaracion5 SEMICOLON

    COLON           shift and go to state 36


state 26

    (25) declaracion1 -> ID . declaracion2 declaracion4
    (26) declaracion2 -> . LSBRAC CTEI RSBRAC declaracion3
    (27) declaracion2 -> . e
    (147) e -> .

    LSBRAC          shift and go to state 38
    COMMA           reduce using rule 147 (e -> .)
    COLON           reduce using rule 147 (e -> .)

    declaracion2                   shift and go to state 37
    e                              shift and go to state 39

state 27

    (5) clase -> CLASS inicializar_clase ID . clase1 LCBRAC clase2 clase3 RCBRAC clase
    (8) clase1 -> . LT INHERITS ID GT
    (9) clase1 -> . e
    (147) e -> .

    LT              shift and go to state 41
    LCBRAC          reduce using rule 147 (e -> .)

    clase1                         shift and go to state 40
    e                              shift and go to state 42

state 28

    (1) programa -> PROGRAM ID SEMICOLON goto_main clase vars funcion main .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON goto_main clase vars funcion main .)


state 29

    (3) main -> MAIN . LPAR RPAR main_start bloque

    LPAR            shift and go to state 43


state 30

    (34) funcion -> funcion1 FUNCTION . ID inicio LPAR funcion2 RPAR bloque funcion

    ID              shift and go to state 44


state 31

    (37) funcion1 -> VOID funcion_void .

    FUNCTION        reduce using rule 37 (funcion1 -> VOID funcion_void .)


state 32

    (38) funcion_void -> e .

    FUNCTION        reduce using rule 38 (funcion_void -> e .)


state 33

    (22) declaraciones -> declaracion . declaraciones
    (22) declaraciones -> . declaracion declaraciones
    (23) declaraciones -> . e
    (24) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (147) e -> .
    (25) declaracion1 -> . ID declaracion2 declaracion4

    VOID            reduce using rule 147 (e -> .)
    INT             reduce using rule 147 (e -> .)
    FLOAT           reduce using rule 147 (e -> .)
    STRING          reduce using rule 147 (e -> .)
    BOOL            reduce using rule 147 (e -> .)
    MAIN            reduce using rule 147 (e -> .)
    ID              shift and go to state 26

    declaracion                    shift and go to state 33
    declaraciones                  shift and go to state 45
    e                              shift and go to state 35
    declaracion1                   shift and go to state 25

state 34

    (20) vars -> VAR declaracion declaraciones .

    VOID            reduce using rule 20 (vars -> VAR declaracion declaraciones .)
    INT             reduce using rule 20 (vars -> VAR declaracion declaraciones .)
    FLOAT           reduce using rule 20 (vars -> VAR declaracion declaraciones .)
    STRING          reduce using rule 20 (vars -> VAR declaracion declaraciones .)
    BOOL            reduce using rule 20 (vars -> VAR declaracion declaraciones .)
    MAIN            reduce using rule 20 (vars -> VAR declaracion declaraciones .)


state 35

    (23) declaraciones -> e .

    VOID            reduce using rule 23 (declaraciones -> e .)
    INT             reduce using rule 23 (declaraciones -> e .)
    FLOAT           reduce using rule 23 (declaraciones -> e .)
    STRING          reduce using rule 23 (declaraciones -> e .)
    BOOL            reduce using rule 23 (declaraciones -> e .)
    MAIN            reduce using rule 23 (declaraciones -> e .)


state 36

    (24) declaracion -> declaracion1 COLON . declaracion5 SEMICOLON
    (32) declaracion5 -> . tipo
    (33) declaracion5 -> . ID
    (44) tipo -> . INT
    (45) tipo -> . FLOAT
    (46) tipo -> . STRING
    (47) tipo -> . BOOL

    ID              shift and go to state 48
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

    declaracion5                   shift and go to state 46
    tipo                           shift and go to state 47

state 37

    (25) declaracion1 -> ID declaracion2 . declaracion4
    (30) declaracion4 -> . COMMA declaracion1
    (31) declaracion4 -> . e
    (147) e -> .

    COMMA           shift and go to state 50
    COLON           reduce using rule 147 (e -> .)

    declaracion4                   shift and go to state 49
    e                              shift and go to state 51

state 38

    (26) declaracion2 -> LSBRAC . CTEI RSBRAC declaracion3

    CTEI            shift and go to state 52


state 39

    (27) declaracion2 -> e .

    COMMA           reduce using rule 27 (declaracion2 -> e .)
    COLON           reduce using rule 27 (declaracion2 -> e .)


state 40

    (5) clase -> CLASS inicializar_clase ID clase1 . LCBRAC clase2 clase3 RCBRAC clase

    LCBRAC          shift and go to state 53


state 41

    (8) clase1 -> LT . INHERITS ID GT

    INHERITS        shift and go to state 54


state 42

    (9) clase1 -> e .

    LCBRAC          reduce using rule 9 (clase1 -> e .)


state 43

    (3) main -> MAIN LPAR . RPAR main_start bloque

    RPAR            shift and go to state 55


state 44

    (34) funcion -> funcion1 FUNCTION ID . inicio LPAR funcion2 RPAR bloque funcion
    (39) inicio -> . e
    (147) e -> .

    LPAR            reduce using rule 147 (e -> .)

    inicio                         shift and go to state 56
    e                              shift and go to state 57

state 45

    (22) declaraciones -> declaracion declaraciones .

    VOID            reduce using rule 22 (declaraciones -> declaracion declaraciones .)
    INT             reduce using rule 22 (declaraciones -> declaracion declaraciones .)
    FLOAT           reduce using rule 22 (declaraciones -> declaracion declaraciones .)
    STRING          reduce using rule 22 (declaraciones -> declaracion declaraciones .)
    BOOL            reduce using rule 22 (declaraciones -> declaracion declaraciones .)
    MAIN            reduce using rule 22 (declaraciones -> declaracion declaraciones .)


state 46

    (24) declaracion -> declaracion1 COLON declaracion5 . SEMICOLON

    SEMICOLON       shift and go to state 58


state 47

    (32) declaracion5 -> tipo .

    SEMICOLON       reduce using rule 32 (declaracion5 -> tipo .)


state 48

    (33) declaracion5 -> ID .

    SEMICOLON       reduce using rule 33 (declaracion5 -> ID .)


state 49

    (25) declaracion1 -> ID declaracion2 declaracion4 .

    COLON           reduce using rule 25 (declaracion1 -> ID declaracion2 declaracion4 .)


state 50

    (30) declaracion4 -> COMMA . declaracion1
    (25) declaracion1 -> . ID declaracion2 declaracion4

    ID              shift and go to state 26

    declaracion1                   shift and go to state 59

state 51

    (31) declaracion4 -> e .

    COLON           reduce using rule 31 (declaracion4 -> e .)


state 52

    (26) declaracion2 -> LSBRAC CTEI . RSBRAC declaracion3

    RSBRAC          shift and go to state 60


state 53

    (5) clase -> CLASS inicializar_clase ID clase1 LCBRAC . clase2 clase3 RCBRAC clase
    (10) clase2 -> . ATTRIBUTES declaracion atributos asign
    (11) clase2 -> . e
    (147) e -> .

    ATTRIBUTES      shift and go to state 62
    METHODS         reduce using rule 147 (e -> .)
    RCBRAC          reduce using rule 147 (e -> .)

    clase2                         shift and go to state 61
    e                              shift and go to state 63

state 54

    (8) clase1 -> LT INHERITS . ID GT

    ID              shift and go to state 64


state 55

    (3) main -> MAIN LPAR RPAR . main_start bloque
    (4) main_start -> . e
    (147) e -> .

    LCBRAC          reduce using rule 147 (e -> .)

    main_start                     shift and go to state 65
    e                              shift and go to state 66

state 56

    (34) funcion -> funcion1 FUNCTION ID inicio . LPAR funcion2 RPAR bloque funcion

    LPAR            shift and go to state 67


state 57

    (39) inicio -> e .

    LPAR            reduce using rule 39 (inicio -> e .)


state 58

    (24) declaracion -> declaracion1 COLON declaracion5 SEMICOLON .

    ID              reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    VOID            reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    INT             reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    FLOAT           reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    STRING          reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    BOOL            reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    MAIN            reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    METHODS         reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)
    RCBRAC          reduce using rule 24 (declaracion -> declaracion1 COLON declaracion5 SEMICOLON .)


state 59

    (30) declaracion4 -> COMMA declaracion1 .

    COLON           reduce using rule 30 (declaracion4 -> COMMA declaracion1 .)


state 60

    (26) declaracion2 -> LSBRAC CTEI RSBRAC . declaracion3
    (28) declaracion3 -> . LSBRAC CTEI RSBRAC
    (29) declaracion3 -> . e
    (147) e -> .

    LSBRAC          shift and go to state 68
    COMMA           reduce using rule 147 (e -> .)
    COLON           reduce using rule 147 (e -> .)

    declaracion3                   shift and go to state 69
    e                              shift and go to state 70

state 61

    (5) clase -> CLASS inicializar_clase ID clase1 LCBRAC clase2 . clase3 RCBRAC clase
    (16) clase3 -> . METHODS funcion metodos
    (17) clase3 -> . e
    (147) e -> .

    METHODS         shift and go to state 72
    RCBRAC          reduce using rule 147 (e -> .)

    clase3                         shift and go to state 71
    e                              shift and go to state 73

state 62

    (10) clase2 -> ATTRIBUTES . declaracion atributos asign
    (24) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (25) declaracion1 -> . ID declaracion2 declaracion4

    ID              shift and go to state 26

    declaracion                    shift and go to state 74
    declaracion1                   shift and go to state 25

state 63

    (11) clase2 -> e .

    METHODS         reduce using rule 11 (clase2 -> e .)
    RCBRAC          reduce using rule 11 (clase2 -> e .)


state 64

    (8) clase1 -> LT INHERITS ID . GT

    GT              shift and go to state 75


state 65

    (3) main -> MAIN LPAR RPAR main_start . bloque
    (48) bloque -> . LCBRAC estatutos RCBRAC

    LCBRAC          shift and go to state 77

    bloque                         shift and go to state 76

state 66

    (4) main_start -> e .

    LCBRAC          reduce using rule 4 (main_start -> e .)


state 67

    (34) funcion -> funcion1 FUNCTION ID inicio LPAR . funcion2 RPAR bloque funcion
    (40) funcion2 -> . ID COLON tipo funcion3
    (41) funcion2 -> . e
    (147) e -> .

    ID              shift and go to state 78
    RPAR            reduce using rule 147 (e -> .)

    funcion2                       shift and go to state 79
    e                              shift and go to state 80

state 68

    (28) declaracion3 -> LSBRAC . CTEI RSBRAC

    CTEI            shift and go to state 81


state 69

    (26) declaracion2 -> LSBRAC CTEI RSBRAC declaracion3 .

    COMMA           reduce using rule 26 (declaracion2 -> LSBRAC CTEI RSBRAC declaracion3 .)
    COLON           reduce using rule 26 (declaracion2 -> LSBRAC CTEI RSBRAC declaracion3 .)


state 70

    (29) declaracion3 -> e .

    COMMA           reduce using rule 29 (declaracion3 -> e .)
    COLON           reduce using rule 29 (declaracion3 -> e .)


state 71

    (5) clase -> CLASS inicializar_clase ID clase1 LCBRAC clase2 clase3 . RCBRAC clase

    RCBRAC          shift and go to state 82


state 72

    (16) clase3 -> METHODS . funcion metodos
    (34) funcion -> . funcion1 FUNCTION ID inicio LPAR funcion2 RPAR bloque funcion
    (35) funcion -> . e
    (36) funcion1 -> . tipo
    (37) funcion1 -> . VOID funcion_void
    (147) e -> .
    (44) tipo -> . INT
    (45) tipo -> . FLOAT
    (46) tipo -> . STRING
    (47) tipo -> . BOOL

  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    VOID            shift and go to state 19
    RCBRAC          reduce using rule 147 (e -> .)
    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    STRING          shift and go to state 22
    BOOL            shift and go to state 23

  ! VOID            [ reduce using rule 147 (e -> .) ]
  ! INT             [ reduce using rule 147 (e -> .) ]
  ! FLOAT           [ reduce using rule 147 (e -> .) ]
  ! STRING          [ reduce using rule 147 (e -> .) ]
  ! BOOL            [ reduce using rule 147 (e -> .) ]

    funcion                        shift and go to state 83
    funcion1                       shift and go to state 16
    e                              shift and go to state 17
    tipo                           shift and go to state 18

state 73

    (17) clase3 -> e .

    RCBRAC          reduce using rule 17 (clase3 -> e .)


state 74

    (10) clase2 -> ATTRIBUTES declaracion . atributos asign
    (12) atributos -> . declaracion atributos
    (13) atributos -> . e
    (24) declaracion -> . declaracion1 COLON declaracion5 SEMICOLON
    (147) e -> .
    (25) declaracion1 -> . ID declaracion2 declaracion4

  ! shift/reduce conflict for ID resolved as shift
    METHODS         reduce using rule 147 (e -> .)
    RCBRAC          reduce using rule 147 (e -> .)
    ID              shift and go to state 26

  ! ID              [ reduce using rule 147 (e -> .) ]

    declaracion                    shift and go to state 84
    atributos                      shift and go to state 85
    e                              shift and go to state 86
    declaracion1                   shift and go to state 25

state 75

    (8) clase1 -> LT INHERITS ID GT .

    LCBRAC          reduce using rule 8 (clase1 -> LT INHERITS ID GT .)


state 76

    (3) main -> MAIN LPAR RPAR main_start bloque .

    $end            reduce using rule 3 (main -> MAIN LPAR RPAR main_start bloque .)


state 77
